# PiscineRust

./: LATEST
ex01/src/: main.rs
ex02/src/: main.rs
ex03/src/: main.rs
ex04/: Cargo.toml  addresses.csv  empty_val.csv  unknown_type_test.csv
ex04/src/: main.rs
ex05/: contacts.txt
ex05/src/: main.rs
ex06/: Cargo.toml  test.txt
ex06/src/: main.rs
ex07/: Cargo.toml
ex07/core/: Cargo.toml
ex07/core/src/: lib.rs
ex07/linalg/: Cargo.toml
ex07/onnx/: Cargo.toml
ex07/onnx/src/: lib.rs
ex07/src/: main.rs
ex08/: README.md
ex08/client/: hello.txt
ex08/client/src/: main.rs
ex08/server/: Cargo.toml
ex08/server/src/: main.rs
ex09/: Cargo.toml
ex09/src/: main.rs
